--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "zodiacolor",
+  "homepage": "https://zodiacolor.vercel.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
