--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^6.5.0",
+    "@react-three/drei": "^9.40.0",
+    "@react-three/fiber": "^8.9.1",
     "@use-gesture/react": "^10.2.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "three": "^0.146.0"
   },
   "scripts": {
     "start": "react-scripts start",
